switch to record, add type info